# goo-gl-archives

./: .gitguardian.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-daily-branch.yml  create-daily-branch.yml  dump.yml  export-json.yml  generate-html.yml  generate-markdown.yml  release-please.yml  run.yml  static.yml  wayback-machine.yml
db/: archives.db  xac  xad  xae
generate-html/: go.mod
generate-html/cmd/: main.go
generate-html/internal/database/: database.go
generate-html/pkg/html/: html.go
generate-html/templates/: html_template.html  table_template.html
generate-markdown/: go.mod
generate-markdown/cmd/: main.go
generate-markdown/pkg/markdown/: markdown.go
goo-gl-archives/: go.mod  go.sum
goo-gl-archives/cmd/: main.go
goo-gl-archives/internal/database/: database.go
goo-gl-archives/internal/url_processor/: url_processor.go
goo-gl-archives/pkg/utils/: utils.go
src/export-json/: go.mod
src/export-json/cmd/: main.go
src/export-json/internal/database/: database.go
src/export-json/internal/json/: json.go
src/export-json/pkg/models/: link.go
src/goo-gl-archives/: go.mod  go.sum
src/goo-gl-archives/cmd/: main.go
src/goo_gl_archives/: __init__.py  __main__.py
src/goo_gl_archives/model/: link.py
src/goo_gl_archives/utils/: csv.py  logger.py  requests.py  sql.py
tests/: test_init.py
