[project]
name = "goo-gl-archives"
version = "0.1.0"
description = "Archives of links built with the Google URL Shortener."
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0.31",
    "tqdm>=4.66.4",
    "sqlite2csv>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
keywords = []

[project.urls]
Homepage = "https://github.com/ryohidaka/goo-gl-archives"
Repository = "https://github.com/ryohidaka/goo-gl-archives"
Issues = "https://github.com/ryohidaka/goo-gl-archives/issues"
Changelog = "https://github.com/ryohidaka/blob/main/goo-gl-archives/CHANGELOG.md"

[project.scripts]
"goo-gl-archives" = "goo_gl_archives:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/goo_gl_archives"]
